sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:3: error: not found: value getNombreValeur
  for (i<-1 to getNombreValeur()) {
               ^