sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for (i<-1 to getNombreValeur()) {
    var v=getValeur(i)
    var j=i
    while (j>0 && plusPetit(i,j-1)) {  
    	copie(j-1,j)
      j-=1    
    }
    copie(i,j)
  }
 
}